apps/cxs-docs/overlays/production/cxs-docs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cxs-docs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: docs.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: cxs-docs
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - docs.contextsuite.com
      secretName: star-contextsuite-com
